# Voxenta

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
cmake/: Findlibmagic.cmake
effects/: effect_brightness.h  effect_contrast.h  effect_negative.h
imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_filedialog.cpp  imgui_filedialog.h  imgui_impl_glfw_gl3.cpp  imgui_impl_glfw_gl3.h  imgui_internal.h  stb_textedit.h  stb_truetype.h
include/effects/: effect.h  effect_binarization.h  effect_brightness.h  effect_grayscale.h
include/processing/: effect.h  image_processor.h  processing_methods.h  processing_ui.h
include/utils/: data_containers.h
include/windows/: input_img_window.h  properties_window.h
processing/: image_processor.cpp  image_processor.h  processing_data.cpp  processing_data.h  processing_methods.cpp  processing_methods.h  processing_ui.cpp  processing_ui.h
source/voxenta/: CMakeLists.txt
source/voxenta/include/voxenta/: effect_manager.h
source/voxenta/include/voxenta/node_editor/: graph.h  node_editor.h
source/voxenta/include/voxenta/windows/: about_window.h  input_img_window.h  main_window.h  output_img_window.h  properties_window.h  win_prop.h
source/voxenta/src/: effect_manager.cpp  main.cpp
source/voxenta/src/node_editor/: node_editor.cpp
source/voxenta/src/windows/: about_window.cpp  input_img_window.cpp  main_window.cpp  output_img_window.cpp  properties_window.cpp
source/voxenta_effects/: CMakeLists.txt
source/voxenta_effects/include/voxenta/effects/: effect.h
source/voxenta_effects/src/: effect.cpp  effect_common.inl
source/voxenta_effects/src/effects/: effect_binarization.cpp  effect_brightness.cpp  effect_contrast.cpp  effect_grayscale.cpp  effect_negative.cpp
src/effects/: effect_binarization.cpp  effect_brightness.cpp  effect_contrast.cpp  effect_grayscale.cpp  effect_negative.cpp
src/processing/: image_processor.cpp  processing_methods.cpp  processing_ui.cpp
src/windows/: about_window.cpp  input_img_window.cpp  main_window.cpp  output_img_window.cpp  properties_window.cpp
utils/: data_containers.h
windows/: about_window.cpp  about_window.h  input_img_window.cpp  input_img_window.h  main_window.cpp  main_window.h  output_img_window.cpp  output_img_window.h  properties_window.cpp  properties_window.h  win_prop.h
